<resources>
    <string name="app_name">Weather</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_favorite">Favorite</string>

    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="location">Location</string>
    <string name="gps">GPS</string>
    <string name="map">From Map</string>
    <string name="wind_speed_unit">Wind Speed Unit</string>
    <string name="meters_per_sec">Meters/sec</string>
    <string name="miles_per_hour">Miles/hour</string>
    <string name="nextFiveDays">Next Five Days:</string>
    <string name="dailyDetails">Daily Details</string>
    <string name="changeLocation">Change Location</string>
    <string name="remove">Remove</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity:</string>
    <string name="windSpeed">Wind Speed</string>
    <string name="clouds">Clouds</string>
    <string name="updateLocation">Refresh Location</string>
</resources>