<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vscode_background"
    android:paddingBottom="30dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Weather Description -->
            <TextView
                android:id="@+id/txtWeatherDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="WeatherDesk"
                android:textColor="@color/vscode_text_primary"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <!-- Weather Icon -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="75dp"
                android:layout_height="71dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Day Label -->

            <!-- Date Label -->

            <TextView
                android:id="@+id/txtDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="36dp"
                android:text="Today"
                android:textColor="@color/vscode_text_secondary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textColor="@color/vscode_text_secondary"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="@+id/txtDay" />

            <!-- Temperature Display -->
            <TextView
                android:id="@+id/txtTemp"
                android:layout_width="wrap_content"
                android:layout_height="76dp"
                android:layout_marginTop="40dp"
                android:text="Temp °C"
                android:textColor="@color/vscode_text_primary"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <!-- Location Description -->
            <TextView
                android:id="@+id/txtLocationDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Location Desc"
                android:textColor="@color/vscode_text_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTemp" />

            <!-- Forecast RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewHourly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnUpdateLocation" />

            <!-- Additional Details Section -->
            <TextView
                android:id="@+id/txtDailyDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:text="@string/dailyDetails"
                android:textColor="@color/vscode_text_primary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewHourly" />

            <!-- Other Weather Info -->

            <TextView
                android:id="@+id/txtPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginTop="16dp"
                android:text="Pressure"
                android:textColor="@color/vscode_text_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDailyDetails" />

            <TextView
                android:id="@+id/txtWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="Wind Speed"
                android:textColor="@color/vscode_text_secondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtPressure" />

            <TextView
                android:id="@+id/txtHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Humidity"
                android:textColor="@color/vscode_text_secondary"
                app:layout_constraintStart_toStartOf="@+id/txtPressure"
                app:layout_constraintTop_toBottomOf="@+id/txtPressure" />

            <TextView
                android:id="@+id/txtClouds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Clouds"
                android:textColor="@color/vscode_text_secondary"
                app:layout_constraintStart_toStartOf="@+id/txtWindSpeed"
                app:layout_constraintTop_toTopOf="@+id/txtHumidity" />

            <!-- 5-Day Forecast Section -->
            <TextView
                android:id="@+id/txtNext5Days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/nextFiveDays"
                android:textColor="@color/vscode_text_primary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHumidity" />

            <!-- Next 5 Days RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewDaily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtNext5Days" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                app:layout_constraintStart_toStartOf="@+id/txtDailyDetails"
                app:layout_constraintTop_toTopOf="@+id/txtPressure" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/humidity"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/txtHumidity" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/windSpeed"
                app:layout_constraintEnd_toStartOf="@+id/txtWindSpeed"
                app:layout_constraintTop_toTopOf="@+id/txtWindSpeed" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clouds"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/txtClouds" />

            <Button
                android:id="@+id/btnUpdateLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/updateLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLocationDesc" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
